--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "framer-motion": "^8.4.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
