--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_URL=https://street-seller-backend.onrender.com/api/product
+REACT_APP_BASE_URL=https://street-seller-backend.onrender.com/api/
